some more tests